Fixes for floating pane on IE, so the resize bar doesn't appear misaligned.
IE runs in strict mode or compatibility mode (compatibility mode is the default),
depending on the header at the top of the html page.
One difference is whether or not width:100% includes the borders.

Ideally dojo should support both modes, but I think to do that we will need
to use css expressions to do that (?).  Anyway, for now I am (reluctantly)
checking in a version that supports IE in compatibility mode only.

Subject to change later.

git-svn-id: http://svn.dojotoolkit.org/src@3258 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/html/shadowIE.css
+++ b/trunk/src/html/shadowIE.css
@@ -9,14 +9,14 @@
 .dojoShadowTR{
 	position: absolute;
 	top: -8px;
-	right: -6px;
+	right: -8px;
 	width: 8px;
 	height: 8px;
 	line-height: 0px;
 }
 .dojoShadowBL{
 	position: absolute;
-	bottom: -6px;
+	bottom: -8px;
 	left: -8px;
 	width: 8px;
 	height: 8px;
@@ -24,8 +24,8 @@
 }
 .dojoShadowBR{
 	position: absolute;
-	bottom: -6px;
-	right: -6px;
+	bottom: -8px;
+	right: -8px;
 	width: 8px;
 	height: 8px;
 	line-height: 0px;
@@ -42,7 +42,7 @@
 
 .dojoShadowB{
 	position: absolute;
-	bottom: -6px;
+	bottom: -8px;
 	left: 0px;
 	width: 100%;
 	height: 8px;
@@ -60,7 +60,7 @@
 .dojoShadowR{
 	position: absolute;
 	top: 0px;
-	right: -6px;
+	right: -8px;
 	width: 8px;
 	height: 100%;
 	line-height: 0px;
