--- a/trunk/src/widget/templates/HtmlResizeHandle.css
+++ b/trunk/src/widget/templates/HtmlResizeHandle.css
@@ -1,9 +1,9 @@
 .dojoHtmlResizeHandle {
 	float: right;
-	margin-bottom: 2px;
 	width: 13px;
 	height: 13px;
 	z-index: 20;
 	cursor: nw-resize;
 	background-image: url(grabCorner.gif);
+	line-height: 0px;
 }
